test/neg/neg-rpc9.errc
function object provided to rpc cannot be invoked on the given arguments as rvalue references
